--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,8 +43,12 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.54.0",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "prettier": "^3.1.0",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2"
   }
 }
